--- a/Todo.org
+++ b/Todo.org
@@ -1,4 +1,34 @@
+- 买个手托
 - 查看
 - 2. thinkphp
 - 
 - 
+
+** 费曼学习TODO
+   
+- emacs
+- 
+- 
+** 学以致用  ( 做运维 ) 自己能做些什么，有哪些时间
+   
+- 做什么，用什么精力去做，做了能收货什么
+- 做改善心智的事情 (培养一个好习惯，不要那么焦虑，看到生活好的一面)
+- 造一个工具 (用一个工具)
+
+** 日常活动
+
+- 21点睡觉 (20:30 准备睡觉)，4:15点起床(刷牙洗脸) (4:00准备起床)
+- 学习也是工作的一部分，工作累了要运动
+- 对学习的内容，每学一段落，使用费曼学习法进行反思，过半天，要再次进行反思
+
+** 生活中的美好
+- 自己鼓励自己，自己夸自己，反馈，才能感觉生活的美好
+- 热心观察世界，想到积极的一面,少想点消极的一面，就会心情好点
+- 我妈妈一直对我不离不弃:smile
+- :😄: smile::😸: 😸 
+
+** 计算机给我什么了
+  - 可以把旧的电脑作为服务器
+  - 我可以用计算机做什么
+  - 1 万小时的练习 (而 windows 的用法，都不用1万小时，注意对比 )，这里我会投机！！轻松的
+  - 我对软件的理解程度，已经到哪一方面了，可以实际操作下
