--- a/关于人/人.org
+++ b/关于人/人.org
@@ -1,4 +1,8 @@
 ** 想法
+   
+人，要接纳自己，接纳自己的亲人，接纳世界。然后观察世界，然后融入世界，融入环境。然后可以不会很孤独，受到帮助。   
+
+学以致用，学了太多东西，如果不去制作，产生用途，停留在脑子里，也是没用的，就算不去产生商业价值，也可以自己用呀！
 
 人是一个有着短暂生命的生物。
 
@@ -36,4 +40,4 @@
 
 ** 只有自己才能救自己 ( 思想统一 )
 
- 
+** 人生在你做什么，有些东西不用知道(悟道)，按部就班就好，而有些，要自己选择做什么
