--- a/关于人/人.org
+++ b/关于人/人.org
@@ -29,6 +29,9 @@
 我能抓到的是商品，还有商业服务。其它一概抓不到
 
 人的痛苦与幸福，与人的需求有关，有些东西，不要因为得不到而感到痛苦，因为有些东西是永远也得不到的。
+
+下定决心是一切的开始，是改变的开始。
+
 ** 如何去改变
  ABC 理论
 -  A 代表情感情绪：强化高峰体验，提供情感动力。
