--- a/Todo.org
+++ b/Todo.org
@@ -2,6 +2,17 @@
 - http://www.haiqism.com/
 - 官网
 
+** TODO 读一本好书 (细细品读） 
+   计算机程序的构造和解释
+   
+  
+:注意:
+改变低效的顺序阅读习惯，使用跳读法或主题阅读法 (要有管理学，管理者的技能，做自己的管理者）
+
+必须接受的法则 ： 基础理论的存在
+:END:
+ 
+ 
 ** 费曼学习 TODO
 ** 学以致用  ( 做运维 ) 自己能做些什么，有哪些时间
    
