--- a/计算机/数据存储/数据库.org
+++ b/计算机/数据存储/数据库.org
@@ -23,5 +23,20 @@
 
 *** 关系模型
 ** 数据库的创建与管理
+   
+*** 数据库的设计
 
+    需求分析 -> 关系模型 -> 优化 -> 实施
+    
+*** 主键 (唯一确认某个东西)
+    
+   - 自动编号主键
+   - 单字段主键
+   - 多字段主键
+    
+*** 索引 (类似图书馆的索引卡片)
+    
+    - 默认有一个主键索引
+    - 新建其他关系的索引
+    
 ** 表和关系
