--- a/Todo.org
+++ b/Todo.org
@@ -1,10 +1,9 @@
 - 2. thinkphp
 - http://www.haiqism.com/
 - 官网
+- 
 
-** TODO 读一本好书 (细细品读） 
-   计算机程序的构造和解释
-   
+** TODO 读一本好书 (细细品读，这是一种低效的阅读模式，可能在中小学知识需要大量增长时需要） 
   
 :注意:
 改变低效的顺序阅读习惯，使用跳读法或主题阅读法 (要有管理学，管理者的技能，做自己的管理者）
