--- a/关于人/人.org
+++ b/关于人/人.org
@@ -1,48 +1,4 @@
-** 想法
-   
-乐观比悲观困难，但受益好的多。   
-   
-人，要接纳自己，接纳自己的亲人，接纳世界。然后观察世界，然后融入世界，融入环境。然后可以不会很孤独，受到帮助。   
+人是动物
 
-学以致用，学了太多东西，如果不去制作，产生用途，停留在脑子里，也是没用的，就算不去产生商业价值，也可以自己用呀！
 
-人是一个有着短暂生命的生物。
 
-人要吃喝玩乐，前提是有钱有闲。
-
-古人劳动获取物质，今人劳动获取金钱。 金钱是物质的另一种表现形式。政府会对货币进行贬值。
-
-获取报酬的标准是： 帮别人解决问题  (寻找需求）
-
-个人成长的标准是： 帮自己解决问题
-
-解决问题的方法是： 先自我思考，不会的可以网络查找。
-
-日常工作/生活的心态是：乐观积极 (容易满足，用心体验）
-
-运动的好处是全方面的。
-
-个人在社会中，在阶级里，在政府管控下，是受到压迫的。
-
-通货膨胀，生活的成本会增长，这是趋势。
-
-我能抓到的是商品，还有商业服务。其它一概抓不到
-
-人的痛苦与幸福，与人的需求有关，有些东西，不要因为得不到而感到痛苦，因为有些东西是永远也得不到的。
-
-下定决心是一切的开始，是改变的开始。
-
-** 如何去改变
- ABC 理论
--  A 代表情感情绪：强化高峰体验，提供情感动力。
--  B 代表行为行动：走出自己的舒适区，做你害怕的事，害怕就会消失。
-- C 代表认知、思维 ：认识到自己脑子中存在不少根深蒂固但未必正确的观念。
-
- 
-** 运动
-
-   - 运动促使大脑活跃，提高精气神
-
-** 只有自己才能救自己 ( 思想统一 )
-
-** 人生在你做什么，有些东西不用知道(悟道)，按部就班就好，而有些，要自己选择做什么
