--- a/关于人/人生.org
+++ b/关于人/人生.org
@@ -8,7 +8,7 @@
 ** 选择爱人
 ** 选择生活与健康
 ** 选择心态
-
+** 生命倒计时
    
 * 克服障碍
   
@@ -17,3 +17,12 @@
 - C 代表认知、思维 ：认识到自己脑子中存在不少根深蒂固但未必正确的观念。
 
   
+* 人生大环境 (世界在发展，新事物不断出现)
+
+** 政治
+
+** 军事
+
+** 历史背景
+
+** 科技
