--- a/兼职.org
+++ b/兼职.org
@@ -9,7 +9,10 @@
 
  推荐挣钱方式：给学长（姐）们做毕设。
 
- 我可以毫不夸张地说：许多二本院校的傻逼学生，一整天浑浑噩噩，胸无大志，腹无点墨，他们的毕业季，就是你收外快的绝佳时机。一般院校的毕设课题大多是些信息管理系统相关的，虽然简单，但是对于那些成天逃课打dota的小白们，这是绝无可能完成的任务。你可以给他们做，但是不能随随便便地做：
+ 我可以毫不夸张地说：许多二本院校的傻逼学生，一整天浑浑噩噩，胸无大志，腹无点墨，
+ 他们的毕业季，就是你收外快的绝佳时机。一般院校的毕设课题大多是些信息管理系统相
+ 关的，虽然简单，但是对于那些成天逃课打dota的小白们，这是绝无可能完成的任务。你
+ 可以给他们做，但是不能随随便便地做：
 
  作为一个java developer，我这里可以给你一些实际的建议：
 
