--- a/计算机/计算机网络.org
+++ b/计算机/计算机网络.org
@@ -5,14 +5,6 @@
 
 协议族: 一系列协议 (传送芝麻一套标准，传输西瓜另一套标准）
 
-** OSI 协议族
-   - 应用层 (针对每个应用的协议)
-   - 表示层 ( 接收不同表示形式的信息，如文字流，图像，声音等)
-   - 会话层 (何时建立连接，何时断开连接及连接保持)
-   - 传输层 (是否数据丢失)
-   - 网络层 (路由目标地址)
-   - 数据链路层 (数据帧与比特流之间切换)
-   - 物理层 (比特流与电子信号之间的切换）
 ** TCP/IP 协议族
 *** 分层 
  - 应用层协议 (文件层)
@@ -126,3 +118,26 @@
 
     6、浏览器将该 html 文本并显示内容; 　　
 
+
+    
+** 域名
+> 一串点分隔的字符串指定网络上的计算机  
+> 网域名称系统（DNS，Domain Name System，有时也简称为域名）是因特网的一项核心服务  
+>DNS使用TCP和UDP端口53  
+
+*** 域名结构
+**** 顶级域名
+.com
+**** 一级域名 (也称注册域名，主域名)
+g.com
+
+**** 二级域名 (二级或以上的域名也称子域名) 
+zh.wikipedia.org
+
+
+*** 域名解析
+
+- 主机记录（A记录），对其操作称之为域名解析，即把子域名解析到指定的IP地址   
+    - @ 将空主机名做A记录指向您的IP地址，服务器默认会指定 www
+- 别名记录（CNAME记录），即把已开设的主机名，指向到已有另一主机名   
+- 邮件记录（MX记录），即把域名指向到某邮件服务器，以便接受和发送邮件  
