--- a/计算机/计算机科学技术.org
+++ b/计算机/计算机科学技术.org
@@ -1,3 +1,188 @@
+* 计算机科学概论
+
+** 数据存储
+
+*** 位和位存储
+
+*** 主存储器
+
+*** 海量存储器
+
+*** 信息表示
+
+*** 二进制系统
+
+*** 整数存储
+
+*** 小数存储
+
+*** 数据压缩
+
+*** 通信差错
+
+** 数据控制
+   
+*** 计算机体系结构
+
+*** 机器语言
+
+*** 执行程序
+
+*** 算术、逻辑指令
+
+*** 与其他设备通信
+
+*** 通信速率
+
+*** 流水线
+
+** 操作系统
+  
+*** 操作系统的历史 
+
+*** 软件概述
+
+*** 协调机器的活动
+
+*** 处理进程间的竞争
+
+*** 安全性
+
+** 组网和因特网
+
+*** 网路基础
+
+*** 因特网
+
+*** 万维网
+
+*** 因特网协议
+
+*** 安全性
+
+** 算法
+  
+*** 算法的概念 
+
+*** 算法的表示
+
+*** 算法的发现
+
+*** 迭代结构
+
+*** 递归结构
+
+*** 有效性与正确性
+
+** 程序设计语言
+  
+*** 历史 
+
+*** 传统的程序设计概念
+
+*** 过程单元
+
+*** 语言实现
+
+*** 面向对象程序设计
+
+*** 程序设计中的并发活动
+
+*** 说明性程序设计
+
+** 软件工程
+  
+*** 软件工程学科 
+
+*** 软件生命周期
+
+*** 软件工程方法
+
+*** 行业工具
+
+*** 质量保证
+
+*** 文档编制
+
+*** 人机界面
+
+*** 软件所有权和责任
+
+** 数据抽象
+
+*** 数据结构基础
+
+*** 列表、栈和队列
+
+*** 树
+    
+*** 
+
+** 数据库系统
+
+*** 数据库基础
+
+*** 关系模型
+    
+*** 面向对象数据库
+
+*** 维护数据库的完整性
+
+*** 传统的文件结构
+
+**** 顺序文件
+
+**** 索引文件
+
+**** 散列文件
+     
+*** 数据挖掘
+
+*** 数据库技术的社会影响
+
+** 计算机图形学
+
+*** 计算机图形学的范围
+
+*** 3D 图形概述
+
+*** 建模
+
+*** 渲染
+
+*** 处理全局照明
+
+*** 动画
+
+** 人工智能
+  
+*** 智能与机器
+
+*** 感知
+
+*** 推理
+
+*** 学习
+
+*** 人工神经网络
+
+*** 机器人学 
+
+*** 后果的思考
+
+** 计算理论
+  
+*** 函数及其计算 
+
+*** 图灵机
+
+*** 通用程序设计语言
+
+*** 一个不可计算的函数
+
+*** 问题的复杂性
+
+*** 公钥密码学
 * 计算机网络
 计算机网络: 数据进行传输
 
@@ -123,7 +308,7 @@
 ** 域名
 > 一串点分隔的字符串指定网络上的计算机  
 > 网域名称系统（DNS，Domain Name System，有时也简称为域名）是因特网的一项核心服务  
->DNS使用TCP和UDP端口53  
+>DNS 使用 TCP 和 UDP 端口 53  
 
 *** 域名结构
 **** 顶级域名
@@ -137,7 +322,7 @@ zh.wikipedia.org
 
 *** 域名解析
 
-- 主机记录（A记录），对其操作称之为域名解析，即把子域名解析到指定的IP地址   
-    - @ 将空主机名做A记录指向您的IP地址，服务器默认会指定 www
-- 别名记录（CNAME记录），即把已开设的主机名，指向到已有另一主机名   
-- 邮件记录（MX记录），即把域名指向到某邮件服务器，以便接受和发送邮件  
+- 主机记录（A记录），对其操作称之为域名解析，即把子域名解析到指定的 IP 地址   
+    - @ 将空主机名做 A 记录指向您的 IP 地址，服务器默认会指定 www
+- 别名记录（CNAME 记录），即把已开设的主机名，指向到已有另一主机名   
+- 邮件记录（MX 记录），即把域名指向到某邮件服务器，以便接受和发送邮件  
