--- a/计算机/设计工具/java/java.org
+++ b/计算机/设计工具/java/java.org
@@ -14,16 +14,16 @@ class HelloWorld{
         String name1="今天天气很好";
         int name2=34;
         final double PI=3.1415926;  //PI 名词
-        System.out.println("打印名词1的内容: name1="+name1);
-        System.out.println("打印名词2的内容: name2="+name2);
-        System.out.println("打印名词PI的内容: PI="+PI);
+        System.out.println("打印名词 1 的内容: name1="+name1);
+        System.out.println("打印名词 2 的内容: name2="+name2);
+        System.out.println("打印名词 PI 的内容: PI="+PI);
         }
     }
 ```
 
-- 1. java语言 是由一个语句块组成的，表示某个对象
+- 1. java 语言 是由一个语句块组成的，表示某个对象
 - 2. 语句块由语句组成，而语句由 名词+动词/操作符 组成
-- 3. 这就是 java语言的全部内容
+- 3. 这就是 java 语言的全部内容
 
 ** For-Each 
 ``` java
@@ -68,29 +68,29 @@ class 类名 implements 接口 1,接口 2
 ** Number & Math 类
 | 方法        | 描述                                                                                                                                              |
 |-------------+---------------------------------------------------------------------------------------------------------------------------------------------------|
-| xxxValue()  | 将 Number 对象转换为xxx数据类型的值并返回。                                                                                                       |
-| compareTo() | 将number对象与参数比较。                                                                                                                          |
-| equals()    | 判断number对象是否与参数相等。                                                                                                                    |
+| xxxValue()  | 将 Number 对象转换为 xxx 数据类型的值并返回。                                                                                                       |
+| compareTo() | 将 number 对象与参数比较。                                                                                                                          |
+| equals()    | 判断 number 对象是否与参数相等。                                                                                                                    |
 | valueOf()   | 返回一个 Number 对象指定的内置数据类型                                                                                                            |
 | toString()  | 以字符串形式返回值。                                                                                                                              |
-| parseInt()  | 将字符串解析为int类型。                                                                                                                           |
+| parseInt()  | 将字符串解析为 int 类型。                                                                                                                           |
 | abs()       | 返回参数的绝对值。                                                                                                                                |
 | ceil()      | 返回大于等于( >= )给定参数的的最小整数，类型为双精度浮点型。                                                                                      |
 | floor()     | 返回小于等于（<=）给定参数的最大整数 。                                                                                                           |
-| rint()      | 返回与参数最接近的整数。返回类型为double。                                                                                                        |
-| round()     | 它表示四舍五入，算法为 Math.floor(x+0.5)，即将原来的数字加上 0.5 后再向下取整，所以，Math.round(11.5) 的结果为12，Math.round(-11.5) 的结果为-11。 |
+| rint()      | 返回与参数最接近的整数。返回类型为 double。                                                                                                        |
+| round()     | 它表示四舍五入，算法为 Math.floor(x+0.5)，即将原来的数字加上 0.5 后再向下取整，所以，Math.round(11.5) 的结果为 12，Math.round(-11.5) 的结果为-11。 |
 | min()       | 返回两个参数中的最小值。                                                                                                                          |
 | max()       | 返回两个参数中的最大值。                                                                                                                          |
-| exp()       | 返回自然数底数e的参数次方。                                                                                                                       |
+| exp()       | 返回自然数底数 e 的参数次方。                                                                                                                       |
 | log()       | 返回参数的自然数底数的对数值。                                                                                                                    |
 | pow()       | 返回第一个参数的第二个参数次方。                                                                                                                  |
 | sqrt()      | 求参数的算术平方根。                                                                                                                              |
-| sin()       | 求指定double类型参数的正弦值。                                                                                                                    |
-| cos()       | 求指定double类型参数的余弦值。                                                                                                                    |
-| tan()       | 求指定double类型参数的正切值。                                                                                                                    |
-| asin()      | 求指定double类型参数的反正弦值。                                                                                                                  |
-| acos()      | 求指定double类型参数的反余弦值。                                                                                                                  |
-| atan()      | 求指定double类型参数的反正切值。                                                                                                                  |
+| sin()       | 求指定 double 类型参数的正弦值。                                                                                                                    |
+| cos()       | 求指定 double 类型参数的余弦值。                                                                                                                    |
+| tan()       | 求指定 double 类型参数的正切值。                                                                                                                    |
+| asin()      | 求指定 double 类型参数的反正弦值。                                                                                                                  |
+| acos()      | 求指定 double 类型参数的反余弦值。                                                                                                                  |
+| atan()      | 求指定 double 类型参数的反正切值。                                                                                                                  |
 | atan2()     | 将笛卡尔坐标转换为极坐标，并返回极坐标的角度值。                                                                                                  |
 | toDegrees() | 将参数转化为角度。                                                                                                                                |
 | toRadians() | 将角度转换为弧度。                                                                                                                                |
@@ -107,7 +107,7 @@ class 类名 implements 接口 1,接口 2
 | isLowerCase()  | 是否是小写字母                          |
 | toUpperCase()  | 指定字母的大写形式                      |
 | toLowerCase()  | 指定字母的小写形式                      |
-| toString()     | 返回字符的字符串形式，字符串的长度仅为1 |
+| toString()     | 返回字符的字符串形式，字符串的长度仅为 1 |
 
 ** String 
 
@@ -118,7 +118,7 @@ class 类名 implements 接口 1,接口 2
 | int                   | compareTo(String anotherString) 按字典顺序比较两个字符串。                                                               |
 | int                   | compareToIgnoreCase(String str) 按字典顺序比较两个字符串，不考虑大小写。                                                 |
 | String                | concat(String str) 将指定字符串连接到此字符串的结尾。                                                                    |
-| boolean               | contentEquals(StringBuffer sb) 当且仅当字符串与指定的StringBuffer有相同顺序的字符时候返回真。                            |
+| boolean               | contentEquals(StringBuffer sb) 当且仅当字符串与指定的 StringBuffer 有相同顺序的字符时候返回真。                            |
 | static                | String copyValueOf(char[] data) 返回指定数组中表示该字符序列的 String。                                                  |
 | static                | String copyValueOf(char[] data, int offset, int count) 返回指定数组中表示该字符序列的 String。                           |
 | boolean               | endsWith(String suffix) 测试此字符串是否以指定的后缀结束。                                                               |
@@ -158,7 +158,7 @@ class 类名 implements 接口 1,接口 2
 | String                | toUpperCase() 使用默认语言环境的规则将此 String 中的所有字符都转换为大写。                                               |
 | String                | toUpperCase(Locale locale) 使用给定 Locale 的规则将此 String 中的所有字符都转换为大写。                                  |
 | String                | trim() 返回字符串的副本，忽略前导空白和尾部空白。                                                                        |
-| static                | String valueOf(primitive data type x) 返回给定data type类型x参数的字符串表示形式。                                       |
+| static                | String valueOf(primitive data type x) 返回给定 data type 类型 x 参数的字符串表示形式。                                       |
 | contains(CharSequence | chars) 判断是否包含指定的字符系列。                                                                                      |
 | isEmpty()             | 判断字符串是否为空。                                                                                                     |
 
@@ -215,7 +215,7 @@ class 类名 implements 接口 1,接口 2
  System.out.println("单词是" + word);
 
  double d = sc.nextDouble();
- System.out.println("double数字是" + d);
+ System.out.println("double 数字是" + d);
 ```
 *** 输入密码 Console
 ```
@@ -266,6 +266,10 @@ java -classpath /home/user/classdir:.:/home/user/archives/archive.jar MyProg
 方法 
 - add
 - size
-- ensureCapacity(100) 分配空间100 
+- ensureCapacity(100) 分配空间 100 
 - trimToSize (销减尺寸，注意空间不会增长)
 
+
+* Java
+  
+**   
