--- a/Todo.org
+++ b/Todo.org
@@ -1,7 +1,7 @@
-- https://www.r2coding.com/#/
+- 同步资源
+- 
   
-- 2. thinkphp
-- http://www.haiqism.com/
+  
+  
 - 好的博客  https://www.cnblogs.com/F4NNIU/p/9054995.html
 - https://www.mobaishare.com/
-- https://www.getwox.com/
