--- a/计算机/开发软件/frame/web/bootstrap/bootstrap.org
+++ b/计算机/开发软件/frame/web/bootstrap/bootstrap.org
@@ -8,7 +8,7 @@
      </td>
 
 
-     ﻿<div id="ShowImage_Form" class="modal hide">         
+     <div id="ShowImage_Form" class="modal hide">         
        <div class="modal-header">
          <button data-dismiss="modal" class="close" type="button"></button>
        </div>
