--- a/关于人/人生.org
+++ b/关于人/人生.org
@@ -26,3 +26,14 @@
 ** 历史背景
 
 ** 科技
+* 生活
+** 不要在床上办公 
+
+   床上办公，太热，太舒服，容易睡着
+
+   在家办公的形式：
+
+   1. 准时起床，换上正式衣服，一定要当做正常上班一样
+   2. 不要在休息的地方，例如床上，办公 (工作是工作，生活是生活，娱乐是娱乐)
+
+
