--- a/关于人/你好，世界.org
+++ b/关于人/你好，世界.org
@@ -8,7 +8,8 @@
 - [x] 学 1 个图形命令  计算器，用鼠标点击对应的对象即可
 - [x] 学绘画，方形色块，画玻璃外墙
 - [x] 看一篇文章，写出内容
-- [ ] 更新本目录  github
+- [x] 更新本目录  github
+- [ ] 看一页书
    
 * 2022   
  
