--- a/关于人/你好，世界.org
+++ b/关于人/你好，世界.org
@@ -1,16 +1,21 @@
 万事开头难，定一个目标更难，定一个简短的目标，能立刻完成的，完成后反思下，提高成就感。可以打开新奇的世界。。。。
 
 * 目标
+** 20
+- [x] 编程一页，为何编程需要复制粘贴(跟你制造东西一样，不会重头设计东西，而是用模板，用工具一样)
+- [x] 导入机器编号
+- [] 看一页编程书 (编程，是对 对象的内容和行为的描述)
+  
+* 2022   
+ 
+** 1 月 
 
-** TODO 19
+*** 19
 - [x]  休息 5 分钟，深呼吸  
 - [x] 学 1 个终端命令  bc 计算器，计算算数就可以
 - [x] 学 1 个图形命令  计算器，用鼠标点击对应的对象即可
 - [x] 学绘画，方形色块，画玻璃外墙
 - [x] 看一篇文章，写出内容
 - [x] 更新本目录  github
-- [ ] 看一页书
-   
-* 2022   
+- [x] 看一页书
  
-** 1 月 
