--- a/关于人/你好，世界.org
+++ b/关于人/你好，世界.org
@@ -1,15 +1,27 @@
 万事开头难，定一个目标更难，定一个简短的目标，能立刻完成的，完成后反思下，提高成就感。可以打开新奇的世界。。。。
 
-* 目标
+做有意义的事情，分析事情的意义
 
-** TODO 19
+- 爱惜自己
+- 计算机程序员不能做一辈子，但好的项目有可能提早财务自由
+- 没钱寸步难行，能省则省，花在刀刃上
+- 
+
+* 目标
+** 20
+- [x] 深呼吸2分钟 (用于感知身体的状态)
+- [x] 做眼保健操 (用于舒缓眼部肌肉)
+- [ ] 看一页python 的书 (增加在计算机上面处理事情，动手的能力）
+
+
+* 2022   
+ 
+** 1 月 
+*** 19
+    
 - [x]  休息 5 分钟，深呼吸  
 - [x] 学 1 个终端命令  bc 计算器，计算算数就可以
 - [x] 学 1 个图形命令  计算器，用鼠标点击对应的对象即可
 - [x] 学绘画，方形色块，画玻璃外墙
 - [x] 看一篇文章，写出内容
-- [ ] 更新本目录  github
-   
-* 2022   
- 
-** 1 月 
+- [x] 更新本目录  github
