--- a/关于人/你好，世界.org
+++ b/关于人/你好，世界.org
@@ -5,10 +5,17 @@
 - 爱惜自己
 - 计算机程序员不能做一辈子，但好的项目有可能提早财务自由
 - 没钱寸步难行，能省则省，花在刀刃上
-- 
+- 我是一个靠技术（计算机）吃饭的人，凡事想想计算机能做什么，才能吃上饭。
+- 而凭空想象不出来计算机能做什么，还是要看书，学习并理解为什么计算机能做那件事情
 
 * 目标
- 
+*** 21 
+- [x] 看一页计算机书 ，学习计算机能做什么 (计算机能够模拟对象处理数据)
+- [x] 通过数据传输，还能处理远程数据，这就是网络
+- [x] 播放音乐 (mpg123 FILE)
+- [x] 命令行程序，对程序语言进行编译，产生一个执行文件
+- [] 打印N行字符串
+
 * 2022   
  
 ** 1 月 
@@ -16,7 +23,7 @@
 *** 20
 - [x] 深呼吸2分钟 (用于感知身体的状态)
 - [x] 做眼保健操 (用于舒缓眼部肌肉)
-- [ ] 看一页python 的书 (增加在计算机上面处理事情，动手的能力）
+- [x] 看一页python 的书 (增加在计算机上面处理事情，动手的能力）
 
 
 *** 19
