--- a/关于人/你好，世界.org
+++ b/关于人/你好，世界.org
@@ -11,7 +11,10 @@
 * 目标
 * 2022   
 *** 22 
-- 
+- [x] 常量的用法 (常量相当于不可改变的对象，保持对象的严肃性)
+- [x] 运算符的用法（保证对象能够变化的根本原因就是函数和运算符）
+- [] 
+
 ** 1 月 
 *** 21 
 - [x] 看一页计算机书 ，学习计算机能做什么 (计算机能够模拟对象处理数据)
