--- a/关于人/你好，世界.org
+++ b/关于人/你好，世界.org
@@ -8,14 +8,23 @@
 - 我是一个靠技术（计算机）吃饭的人，凡事想想计算机能做什么，才能吃上饭。
 - 而凭空想象不出来计算机能做什么，还是要看书，学习并理解为什么计算机能做那件事情
 
+*** 25
+- [x] 好读书，不求甚解。 读书不用每个标点都记得，但要有一个思考的心思。
+- [x] 万变不离其宗
+- [x] 一个程序的大小一般决定它功能的多少，所以要看程序的体积
+
+
 * 目标
+
+
+
 * 2022   
+** 1 月 
+
 *** 22 
 - [x] 常量的用法 (常量相当于不可改变的对象，保持对象的严肃性)
 - [x] 运算符的用法（保证对象能够变化的根本原因就是函数和运算符）
-- [] 
-
-** 1 月 
+ 
 *** 21 
 - [x] 看一页计算机书 ，学习计算机能做什么 (计算机能够模拟对象处理数据)
 - [x] 通过数据传输，还能处理远程数据，这就是网络
@@ -23,6 +32,7 @@
 - [x] 命令行程序，对程序语言进行编译，产生一个执行文件
 - [x] 打印N行字符串
 - [x] 看一页 java书
+
 
 *** 20
 - [x] 深呼吸2分钟 (用于感知身体的状态)
